--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,12 @@ repositories {
 
 ext {
     junitVersion = '4.13.2'
+    lombokVersion = '1.18.18'
 }
 
 dependencies {
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+
     testImplementation group: 'junit', name: 'junit', version: junitVersion
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
